--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -54,3 +54,15 @@ th {
   padding: 20px;
   text-align: center;
 }
+.cart-summary{
+  text-align: right;
+  margin-top: 20px;
+}
+.checkout-container {
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f8f8f8;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
